main/id-cards/style.css
/* Define color variables */
:root {
    --font-color: rgb(0, 0, 0);
    --border-color: var(--border-color); /* This color is dynamically set in the HTML */
    --background-color: rgb(222, 222, 222);
}

/* Body */
body {
    font-family: "Lato", Arial, Helvetica, sans-serif;
}

/* Container for ID cards */
#container {
    font-size: 0; /* remove empty white space between the id cards */
}

/* Individual ID card */
#idCard {
    position: relative;
    display: inline-flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
    width: 90mm;
    height: 60mm;
    margin: 0.5mm;
    padding: 0.75mm;
    background-color: var(--background-color);
}

/* ID card border color */
#idCard::before {
    --outerBorder: 1mm;
    position: absolute;
    top: var(--outerBorder);
    left: var(--outerBorder);
    bottom: var(--outerBorder);
    right: var(--outerBorder);
    box-sizing: border-box;
    border: 1mm solid var(--border-color);
    content: "";
}

/* ID card content padding */
#idCard > * {
    padding: 2.5mm;
}

/* ID card content layout */
#content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: stretch;
}

/* ID card title */
#title {
    color: var(--font-color);
    font-size: 7mm;
    text-align: center;
    text-decoration: underline;
    margin-bottom: 2.5mm;
}

/* ID card left section */
#leftSection {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 48mm;
    font-size: 5mm;
    line-height: 80%;
    text-transform: uppercase;
    color: var(--font-color);
}

/* ID card first name */
#firstName {
    margin-top: 2mm;
}

/* ID card last name */
#lastName {
    margin-top: 1mm;
    margin-bottom: -2px;
    line-height: 100%;
}

/* ID card QR code */
#qrCode {
    width: 30mm;
    height: 30mm;
}

/* QR code SVG path */
#qrCode > svg > path {
    stroke: black;
}

/* Rules for print layout */
@media print {
    div#idCard {
        break-inside: avoid-page;
    }
}

